--- a/W3SCHOOLS CLON/index.html
+++ b/W3SCHOOLS CLON/index.html
@@ -4,8 +4,7 @@
 <head>
     <title>W3Schools Online Web Tutorials</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="Keywords"
+    <meta name="viewport" content="width=device-width, initia  <meta name="Keywords"
         content="HTML, Python, CSS, SQL, JavaScript, How to, PHP, Java, C, C++, C#, jQuery, Bootstrap, Colors, W3.CSS, XML, MySQL, Icons, NodeJS, React, Graphics, Angular, R, AI, Git, Data Science, Code Game, Tutorials, Programming, Web Development, Training, Learning, Quiz, Exercises, Courses, Lessons, References, Examples, Learn to code, Source code, Demos, Tips, Website">
     <meta name="Description"
         content="Well organized and easy to understand Web building tutorials with lots of examples of how to use HTML, CSS, JavaScript, SQL, Python, PHP, Bootstrap, Java, XML and more.">
@@ -16,14 +15,14 @@
     <meta property="og:description"
         content="W3Schools offers free online tutorials, references and exercises in all the major languages of the web. Covering popular subjects like HTML, CSS, JavaScript, Python, SQL, Java, and many, many more.">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="preload" href="/w3school clon/text1.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="/w3school clon/text2.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="/w3school clon/text3.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="/w3school clon/text4.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="/w3school clon/text5.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="/w3school clon/text5.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="/w3school clon/text7.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="stylesheet" href="/w3school clon/style.css">
+    <link rel="preload" href="/W3SCHOOLS CLON/text1.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/W3SCHOOLS CLON/text2.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/W3SCHOOLS CLON/text3.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/W3SCHOOLS CLON/text4.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/W3SCHOOLS CLON/text5.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/W3SCHOOLS CLON/text5.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/W3SCHOOLS CLON/text7.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="stylesheet" href="/W3SCHOOLS CLON/style.css">
 
     <!-- Google Tag Manager -->
     <script>
